# sra-array-fetch

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sra_array_fetch/: cli.py  submit.py
src/sra_array_fetch/templates/: worker.slurm.j2
src/src/sra_array_fetch/: __init__.py  cli.py  installer.py  submit.py  worker.py
src/src/sra_array_fetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test-runs/: SRR_Acc_List.txt
tests/: test_submit.py
tests/tests/: test_installer.py  test_submit.py  test_worker.py
